--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "GameZone fullstack application",
   "main": "backend/server.js",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start": "cd backend && npm start",
     "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm run dev\"",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
     "backend": "cd backend && npm run dev",
-    "frontend": "cd frontend && npm run dev"
+    "frontend": "cd frontend && npm run dev",
+    "postinstall": "cd backend && npm install && cd ../frontend && npm install"
   },
   "keywords": ["gamezone", "fullstack", "nodejs", "react"],
   "author": "Your Name",
