--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "install": "npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -21,7 +19,8 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["express", "mongodb", "api", "gamezone"],
-  "author": "Your Name",
-  "license": "MIT"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  }
 }
