--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.15.0",
     "react-icons": "^4.10.1",
     "framer-motion": "^10.16.4",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
